### A2J Author 5 * Justice * justicia * 正义 * công lý * 사법 * правосудие
### All Contents Copyright The Center for Computer-Assisted Legal Instruction
### This change log is also displayed via changes.php. Formatting here matters.

# 2014-10-23
* Fixed - display court house replacement image  

# 2014-10-22
* Fixed - a new page now has a button
* Added - Polish language

# 2014-09-24 5.0.1.40
* New - Varable edit popup displays pages using said variable

# 2014-09-23 5.0.1.39
* New - A2J Step # variables for the sign text

# 2014-09-19 5.0.1.38
* New - Feedback button with optional email

# 2014-09-04 5.0.1.37
* Fixed - Warning when leaving viewer or author with unsaved data
* Fixed - Viewer scrollbars now removed when too narrow.
* Changed - internal - A2J 4 import code separate module
* Changed - Viewer button border black, caption bold
* New - Step 0 now has arrow pointing down road

# 2014-08-12
* New - Collapse/expand mapper outline now fades related map points

# 2014-05-08 5.0.1.16 
* New - Guide upload/download
* New - Answer upload/download

# 2014-04-03 5.0.1.14 
* Fixed - Mapper color
* New - New color scheme, internal debug switches
* New - Viewer as IFRAME embedable

# 2014-02-19 5.0.1.8 
* Changed - Split author and viewer into separate folders. 
viewer contains all files required to run in viewer mode
author contains author-only files but incorporates the viewer folder as well
tests contains testing harnesses and sample data


# 2014-01-01 5.0.1.7
* Fixed - proper brackets for A2J 4 imported SET variable function
* Changed - Interview selection on separate tab

# 2013-08-01